<?xml version="1.0"?>
<package format="2">
  <name>kr_planning_msgs</name>
  <version>0.0.0</version>
  <description>The kr_planning_msgs package</description>

  <maintainer email="laurajar@seas.upenn.edu">Laura Jarin-Lipschitz</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  
  <export>
  </export>
</package>
