<?xml version="1.0"?>
<package format="2">
  <name>kr_planning_msgs_utils</name>
  <version>0.0.0</version>
  <description>The kr_planning_msgs_utils package</description>

  <maintainer email="laurajar@seas.upenn.edu">Laura Jarin-Lipschitz</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>kr_planning_msgs</depend>
  <depend>sdl</depend>
  <depend>sdl-image</depend>
  <depend>kr_planning_rviz_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  
  <export>
  </export>
</package>
