<?xml version="1.0"?>
<package format="2">
  <name>kr_planning_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The kr_planning_rviz_plugins package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>
  <maintainer email="laurajar@seas.upenn.edu">Laura Jarin-Lipschitz</maintainer>

  <license>Penn Software License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>pcl_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>
  <depend>kr_planning_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
